# stitch_api_example

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: getting_started_with_stitch_python.md
example/: requirements.txt  server.py
stitch/: __init__.py  sdk.py
